# claude-conversation-manager

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tauri-dev.bat
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src/components/common/: FileImport.tsx  SettingsPanel.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/session/: SessionDetail.tsx
src/components/stats/: StatsDashboard.tsx
src/mock/: conversations.ts
src/stores/: index.ts  sessionStore.ts
src/types/: index.ts
src/utils/: format.ts
