[package]
name = "claude-conversation-manager"
version = "0.1.0"
description = "Claude Conversation Manager - A desktop app for managing Claude chat history"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# SQLite support
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
anyhow = "1.0"
dirs = "5.0"

[profile.release]
panic = "abort"
 codegen-units = 1
lto = true
opt-level = 3
strip = true
